--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -144,6 +144,8 @@
   text-decoration: none;
   color: $color-black;
 
+  @include hover(transform, scale(1.05));
+
   &::after {
     @include underlineLinks;
     background-color: $color-black;
