--- a/src/styles/blocks/nav.scss
+++ b/src/styles/blocks/nav.scss
@@ -17,7 +17,7 @@
     color: $color-white;
     text-decoration: none;
 
-    @include hover(transform, scale(1.05));
+    // @include hover(transform, scale(1.05));
   }
 
   &__link::after {
