--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -74,7 +74,6 @@
   height: 1px;
   width: 100%;
   background-color: $color-white;
-
   transition: transform $effectDuration;
   transform: scale(0);
   transform-origin: center;
@@ -88,6 +87,7 @@
   background-repeat: no-repeat;
   background-size: 24px 24px;
   margin-left: 16px;
+  cursor: pointer;
 
   @include onTablet() {
     width: 70px;
