burger almost here

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -1,20 +1,23 @@
 .menu {
   position: fixed;
+  transform: translateY(-100%);
+  transition: transform 0.2s;
   top: 0;
   left: 0;
   right: 0;
-  transform: translateX(-100%);
-  background-color: #1a5a4c;
+  bottom: 0;
+  z-index: 99;
+  background: #1a5a4c;
+  color: white;
+  list-style: none;
   padding: 27px 20px;
-
-  :target {
-    transform: translateX(0);
-  }
 
   &__links {
     display: flex;
     flex-direction: row;
     gap: 28px;
+    position: relative;
+    left: 72px;
   }
 
   &__link {
@@ -34,10 +37,6 @@
     gap: 24px;
   }
 
-  &__item {
-
-  }
-
   &__opening {
     color: #fff;
     font-family: IBM Plex Sans;
@@ -51,4 +50,8 @@
       font-weight: 600;
     }
   }
+}
+
+.showMenu {
+  transform: translateY(0);
 }
