add task solution

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,16 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+.main__events {
+  @include contentPaddingInline;
+}
 
-body {
-  background: $c-gray;
+.main__gallery {
+  @include contentPaddingInline;
+  margin-bottom: 100px;
+
+  @include onTablet {
+    margin-bottom: 92px;
+  }
+
+  @include onDesktop {
+    margin-bottom: 200px;
+  }
 }
