--- a/src/styles/utils/_mixins.scss
+++ b/src/styles/utils/_mixins.scss
@@ -4,3 +4,60 @@
     #{$_property}: $_toValue;
   }
 }
+
+@mixin onTablet {
+  @media (min-width: $tables-min-width) {
+    @content;
+  }
+}
+
+@mixin onDesktop {
+  @media (min-width: $desktop-min-width) {
+    @content;
+  }
+}
+
+@mixin contentPaddingInline() {
+  padding-inline: 20px;
+
+  @include onTablet {
+    padding-inline: 34px;
+  }
+
+  @include onDesktop {
+    // max-width: 1280px;
+    // margin-inline: auto;
+    padding-inline: 55px;
+  }
+}
+
+@media only screen and (max-width: 1280px) {
+  .gallery__wrapper {
+    display: none;
+  }
+}
+
+@media only screen and (min-width: 1280px) {
+  .slideshow {
+    display: none;
+  }
+}
+
+@mixin pageGrid {
+  --columns: 2;
+  display: grid;
+  column-gap: 20px;
+  grid-template-columns: repeat(var(--columns), 1fr);
+
+  @include onTablet {
+    --columns: 6;
+    column-gap: 30px;
+    // padding: 0 39px;
+  }
+
+  @include onDesktop {
+    --columns: 12;
+    column-gap: 24px;
+    // padding: 0 55px;
+  }
+}
