finish task solution

--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,4 +1,7 @@
 .event {
+
+  @include contentPaddingInline;
+
   &__wrapper {
     display: grid;
     row-gap: 60px;
@@ -89,6 +92,13 @@
     @include onDesktop {
       width: 370px;
     }
+  }
+
+  &__contentPaddingInline {
+    @include onTablet {
+      @include contentPaddingInline;
+    }
+
   }
 
   &__bgimg {
