--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -48,37 +48,28 @@ img {
   max-width: 1000px;
   position: relative;
   margin: auto;
+  display: flex;
+  justify-content: center;
 }
 
 .mySlides {
   display: none;
+
+  &__photo {
+    width: 280px;
+
+    @include onTablet {
+      width: 340px;
+    }
+  }
 
   &__next {
     right: 0;
     border-radius: 3px 0 0 3px;
   }
 
-  &__prev &__next {
-    cursor: pointer;
-    position: absolute;
-    top: 50%;
-    width: auto;
-    padding: 16px;
-    margin-top: -22px;
-    color: white;
-    font-weight: bold;
-    font-size: 18px;
-    transition: 0.6s ease;
-    border-radius: 0 3px 3px 0;
-    user-select: none;
-  }
-
   &__prev:hover &__next:hover {
     background-color: rgba(0,0,0,0.8);
-  }
-
-  &__photo {
-    width: 100%;
   }
 
   &__dots {
