--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -86,6 +86,10 @@
       height: 70px;
     }
 
+    &:hover {
+      border: 2px solid red;
+    }
+
     .icon--arrow {
       display: flex;
       align-items: center;
@@ -111,6 +115,11 @@
     @include onTablet {
       width: 70px;
       height: 70px;
+    }
+
+    &:hover {
+      background-color: red ;
+      border: 4px solid red;
     }
   }
 }
