--- a/src/styles/subscription.scss
+++ b/src/styles/subscription.scss
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   color: $white;
-  background-image: url(../images/regtang22.png);
+  background-image: url(../images/rectang22.jpg);
   background-size: auto 100% ;
   background-position: center;
   background-repeat: no-repeat;
@@ -21,6 +21,14 @@
   &__container {
     text-align: center;
     align-items: center;
+  }
+
+  &__title {
+    margin-bottom: 20px;
+
+    @include onTablet {
+      margin-bottom: 16px;
+    }
   }
 
   &__form {
@@ -74,6 +82,7 @@
     width: 50px;
     height: 50px;
     vertical-align: middle;
+    cursor: pointer;
 
     @include onTablet {
       width: 70px;
