add task solution

--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -78,9 +78,21 @@
 
   }
 
+  &__logo {
+    @include hover(transform, scale(1.05));
+  }
+
   &__icons {
     display: flex;
     gap: 20px;
+  }
+
+  &__fb {
+    @include hover(transform, scale(1.08));
+  }
+
+  &__inst {
+    @include hover(transform, scale(1.08));
   }
 
   &__list {
@@ -214,5 +226,9 @@
     color: $black;
     font-weight: 400;
     line-height: 150%;
+
+    &:hover {
+      color: blue;
+    }
   }
 }
