--- a/src/styles/page.scss
+++ b/src/styles/page.scss
@@ -8,6 +8,7 @@
   font-style: normal;
   font-weight: 300;
   line-height: 150%; /* 24px */
+  scroll-behavior: smooth;
 
   &:has(.page__menu:target) {
     overflow: hidden;
