--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -35,7 +35,7 @@
     @include onDesktop {
       width: 100%;
       height: 100%;
-      @include hover(transform, scale(1.05));
+      @include hover(transform, scale(1.02));
     }
   }
 }
@@ -68,7 +68,8 @@ img {
     border-radius: 3px 0 0 3px;
   }
 
-  &__prev:hover &__next:hover {
+  &__prev:hover,
+  &__next:hover {
     background-color: rgba(0,0,0,0.8);
   }
 
