--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -86,10 +86,6 @@
       height: 70px;
     }
 
-    &:hover {
-      border: 2px solid red;
-    }
-
     .icon--arrow {
       display: flex;
       align-items: center;
@@ -116,10 +112,10 @@
       width: 70px;
       height: 70px;
     }
+  }
 
-    &:hover {
-      background-color: red ;
-      border: 4px solid red;
-    }
+  &__button-img:hover {
+    border: 4px solid red;
+    background-color: red;
   }
 }
