positioning every element

--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -1,5 +1,9 @@
 .contact-us {
   display: grid;
   grid-template-columns: 130px 128px;
-  gap: 20px;
+  gap: 40px 20px;
+
+  &__links {
+    margin-bottom: 80px;
+  }
 }
