--- a/src/styles/blocks/events.scss
+++ b/src/styles/blocks/events.scss
@@ -11,6 +11,7 @@
     line-height: 16px;
     word-spacing: 55px;
     color: #687480;
+    margin-bottom: 15px;
 
     &--highlight {
       font-weight: 700;
@@ -21,5 +22,10 @@
 
   &__info {
     color: #4e4e4e;
+    margin-bottom: 60px;
+  }
+
+  &__picture {
+    margin-bottom: 20px;
   }
 }
