--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -4,13 +4,11 @@
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
-  justify-content: space-between;
 
   &__photo {
     width: 100%;
     height: 100%;
     align-self: flex-start;
-    margin-bottom: 20px;
     position: relative;
     z-index: 0;
   }
@@ -31,5 +29,10 @@
 
   &__background {
     position: relative;
+    margin-bottom: 20px;
+  }
+
+  &__title {
+    margin-bottom: 20px;
   }
 }
