--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -10,6 +10,14 @@
   &__secondary {
     font-size: 36px;
     line-height: 36px;
+    margin-bottom: 40px;
+
+    &--subscribe {
+      color: #FFF;
+      margin: 88px 0 20px;
+      position: absolute;
+      z-index: 1;
+    }
   }
 
   &__third {
@@ -33,12 +41,15 @@
   }
 
   &--rectangle {
+    margin-bottom: 10px;
+
     &::after {
       content: "";
       display: inline-block;
       width: 10px;
       height: 10px;
       background-image: url(../images/icons/rectangle_red.svg);
+      margin-bottom: 2px;
     }
   }
 
