--- a/src/styles/blocks/separator.scss
+++ b/src/styles/blocks/separator.scss
@@ -1,13 +1,15 @@
 .separator {
-  margin: 60px -20px 100px;
+  margin: 0px -20px 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 293px;
 
   &__image {
     background-image: url(../images/separator_image.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 100%;
     width: 100%;
     height: 210px;
     object-fit: cover;
