--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -2,25 +2,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin: 0 -20px;
+  margin: 0 -20px 50px;
 
   &__background {
     background-image: url(../images/subscribe_image.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: 100%;
     width: 100%;
     height: 386px;
     object-fit: cover;
     object-position: center;
     position: relative;
     z-index: 0;
-  }
-
-  &__title {
-    color: #FFF;
-    margin-top: 88px;
-    position: absolute;
-    z-index: 1;
   }
 
   &__text {
@@ -31,7 +25,7 @@
     font-style: normal;
     font-weight: 400;
     line-height: 27px;
-    margin: 144px 20px 0px;
+    margin: 144px 20px 50px;
     position: absolute;
     z-index: 1;
   }
