--- a/src/styles/section.scss
+++ b/src/styles/section.scss
@@ -2,12 +2,17 @@
   text-align: center;
 
   &__events {
-    margin-bottom: 40px;
+    @include contentPaddingInline;
+    text-align: center;
+    margin: 253px 0 40px;
 
     @include onTablet {
       text-align: left;
-      margin-bottom: 48px;
-      @include contentPaddingInline;
+      margin: 88px 0 48px;
+    }
+
+    @include onDesktop {
+      margin: 200px 0 56px;
     }
   }
 
