--- a/src/styles/top-bar.scss
+++ b/src/styles/top-bar.scss
@@ -1,21 +1,20 @@
 .top-bar {
   display: flex;
   align-items: center;
-  padding: 9px 0 250px;
-  position: relative;
+  text-align: center;
 
   @include onTablet {
-    padding: 15px 0 40px;
+    gap: 135px;
   }
 
   @include onDesktop {
-    padding-bottom: 119px;
+    gap: 115px;
   }
 
   &__logo {
-    @include onTablet {
-      width: 220px;
-      text-align: center;
-    }
+    position: relative;
+    flex: 1;
+    display: flex;
+    justify-content: center;
   }
 }
