add task solution

--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -86,7 +86,7 @@
     height: 50px;
 
     @include onTablet {
-      gap: 72px;
+      gap: 59px;
       width: 270px;
       height: 70px;
     }
@@ -116,6 +116,10 @@
     @include onTablet {
       width: 70px;
       height: 70px;
+    }
+
+    &:hover {
+      background-color: $line;
     }
   }
 
