--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,17 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
 * {
   margin: 0;
   box-sizing: border-box;
@@ -15,6 +26,10 @@ a, a:hover, a:focus, a:active {
 .page {
   font-family: 'IBM Plex Sans', sans-serif;
   font-family: 'Montserrat', sans-serif;
+}
+
+.red__title {
+  background-color: #F14A27;
 }
 
 .header {
@@ -48,9 +63,20 @@ a, a:hover, a:focus, a:active {
   }
 
   &__burger {
-    grid-area: 1 / 2;
-    margin-left: -17px;
-    margin-top: 45px;
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    padding-top: 25px;
+    margin-left: -35px;
+
+    &Icon {
+      cursor: pointer;
+      padding: 20px;
+      transition: scale 0.5s linear;
+
+      &:hover {
+        scale: 1.5;
+      }
+    }
 
     @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 1;
@@ -108,6 +134,17 @@ a, a:hover, a:focus, a:active {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    transition: background-color 0.5s ease-in-out, color 0.7s ease-out;
+    cursor: pointer;
+
+    &:hover {
+      background-color: black;
+      color: #fff;
+
+      .header__tickets__play {
+        background-color: #00ccd3;
+      }
+    }
 
     @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 3 / 1;
@@ -145,6 +182,12 @@ a, a:hover, a:focus, a:active {
 
       @media (max-width: 689px) {
         width: 50px;
+      }
+
+      transition: background-color 0.5s ease-in-out;
+
+      &:hover {
+        background-color: #00ccd3;
       }
     }
   }
@@ -192,11 +235,13 @@ a, a:hover, a:focus, a:active {
     background-size: cover;
     background-position: top left;
     grid-column: 7 / 14;
+    width: 725px;
     grid-row: 1 / 6;
     overflow-x: visible;
 
     @media (min-width: 690px) and (max-width: 1245px) {
-      grid-area: 1 / 4 / 4 / span 4;
+      grid-column: 4 / 8;
+      width: auto;
     }
 
     @media (max-width: 689px) {
@@ -220,6 +265,12 @@ a, a:hover, a:focus, a:active {
     line-height: 100%;
     text-align: center;
     color: #0F0E08;
+    cursor: pointer;
+    transition: scale 0.5s ease-in-out;
+
+    &:hover {
+      scale: 1.2;
+    }
 
     @media (min-width: 690px) and (max-width: 1245px) {
       grid-area: 1 / 4 / 1 / 6;
@@ -238,6 +289,161 @@ a, a:hover, a:focus, a:active {
   }
 }
 
+// and this
+.nav__container {
+  height: 100vh;
+  z-index: 2;
+  box-sizing: border-box;
+
+  position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    transform: translateX(-100%);
+    transition: transform 0.3s;
+
+  &.active {
+    transform: translateX(0);
+  }
+}
+
+.nav {
+  z-index: 3;
+  display: grid;
+  grid-template-rows: min-content auto;
+  justify-content: center;
+  grid-template-columns: repeat(12, 70px);
+  height: 233px;
+  width: 100vw;
+  background-color: #1A5A4C;
+  opacity: 100%;
+  grid-column-gap: 30px;
+  padding-top: 47px;
+  padding-bottom: 35px;
+
+  &__crossIcon {
+    grid-column: 1 / 1;
+    grid-row: 1 / 1;
+    cursor: pointer;
+    transition: scale 0.5s ease-in-out;
+
+    &:hover {
+      scale: 1.7;
+    }
+  }
+
+  &__shade {
+    height: 100%;
+    background-color: #18181A;
+    opacity: 50%;
+  }
+
+  @media (min-width: 690px) and (max-width: 1245px) {
+    grid-template-columns: 32px repeat(5, 90px);
+    grid-template-rows: 134px min-content auto auto auto;
+    padding-top: 51px;
+    padding-left: 39px;
+    height: auto;
+    justify-content: start;
+  }
+
+  &__working-schedule {
+    font-family: 'IBM Plex Sans';
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 150%;
+    color: #ffffff;
+
+    &-col-1 {
+      grid-column: 8 / 10;
+      grid-row: 1 / 3;
+
+      @media (min-width: 690px) and (max-width: 1245px) {
+        grid-column: 4 / 6;
+        margin-left: 25px;
+      }
+    }
+
+    &-col-2 {
+      padding-top: 42px;
+      grid-column: 10 / 12;
+      grid-row: 1 / 3;
+
+      @media (min-width: 690px) and (max-width: 1245px) {
+        grid-column: 6 / 7;
+        margin-left: -20px;
+        margin-right: -30px;
+      }
+    }
+  }
+
+  &__separator {
+    grid-column: 7 / 8;
+    grid-row: 1 / 3;
+    height: 145px;
+    width: 1px;
+    background-color: rgba(26, 90, 76, 0.5);
+    margin-left: 35px;
+
+    @media (min-width: 690px) and (max-width: 1245px) {
+      grid-column: 4 / 5;
+      background-color: #fff;
+      opacity: 50%;
+      height: 145px;
+      width: 1px;
+      margin-left: -15px;
+    }
+  }
+
+  &__links {
+    font-family: 'IBM Plex Sans';
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 100%;
+    color: #ffffff;
+
+    &-col-1 {
+      grid-column: 3 / 5;
+    }
+
+    &-col-2 {
+      grid-column: 5 / 7;
+    }
+
+    @media (max-width: 1245px) {
+      &-col-1 {
+        grid-column: 2 / 4;
+      }
+
+      &-col-2 {
+        grid-column: 4 / 6;
+      }
+    }
+
+    @media (min-width: 690px) and (max-width: 1245px) {
+      font-size: 16px;
+
+      &>a {
+        display: block;
+        margin-bottom: 10px;
+      }
+
+      &-col-1 {
+        grid-column: 2 / 3;
+        grid-row: 1 / 3;
+
+        & a:nth-child(4) {
+          margin-top: -17px;
+        }
+      }
+
+      &-col-2 {
+        grid-column: 3 / 4;
+      }
+    }
+  }
+}
 
 .events {
   margin: 200px auto 0;
@@ -274,6 +480,18 @@ a, a:hover, a:focus, a:active {
     display: flex;
     flex-direction: row;
     margin-bottom: 104px;
+
+    &:hover {
+      .events__picture {
+        scale: 1.2;
+        transform-origin: 25% 50%;
+
+        @media (min-width: 690px) and (max-width: 1245px) {
+          scale: 1.1;
+          transform-origin: center;
+        }
+      }
+    }
 
     @media (min-width: 690px) and (max-width: 1245px) {
       flex-direction: column;
@@ -351,10 +569,13 @@ a, a:hover, a:focus, a:active {
     display: block;
     height: 520px;
     min-width: 670px;
+    transition: scale 0.5s ease-in-out;
+    transform-origin: 25% 50%;
 
     @media (min-width: 690px) and (max-width: 1245px) {
       width: 100%;
       height: 100%;
+      transform-origin: center;
     }
 
     @media (max-width: 689px) {
@@ -589,6 +810,15 @@ textarea:focus, input:focus {
   &__social {
     grid-column: 1 / 3;
     grid-row: 2;
+
+    @media (min-width: 690px) and (max-width: 1245px) {
+      grid-column: 1 / 2;
+      grid-row: 2 / 4;
+
+      & img {
+        margin-bottom: 20px;
+      }
+    }
   }
 
   &__smIcon {
@@ -713,7 +943,7 @@ textarea:focus, input:focus {
       &-col-1 {
         grid-column: 2 / 4;
       }
-  
+
       &-col-2 {
         grid-column: 4 / 6;
       }
