header grid for tablet view

--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -1,9 +1,10 @@
 .header {
-  height: 100vh;
+  height: 483px;
   display: flex;
   flex-direction: column;
   align-items: center;
   box-sizing: border-box;
+  margin-bottom: 70px;
 
   &__photo {
     width: 100%;
@@ -34,5 +35,37 @@
 
   &__title {
     margin-bottom: 20px;
+  }
+
+  @media (min-width: 690px) {
+    display: grid;
+    justify-content: space-evenly;
+    grid-template-columns: repeat(6, 90px);
+    grid-template-rows: repeat(3, 130px);
+    height: 384px;
+    margin-bottom: 88px;
+
+    &__background {
+      width: 374px;
+      height: 384px;
+      grid-column: 4 / -1;
+      grid-row: 1 / -1;
+    }
+
+    &__logo {
+      top: 15px;
+      left: 25%;
+    }
+
+    &__title {
+      grid-column: 1 / 4;
+      grid-row: 2 / 3;
+      text-align: left;
+    }
+
+    &__button {
+      grid-column: 1 / 4;
+      grid-row: 3 / 4;
+    }
   }
 }
