--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -8,9 +8,7 @@
     background-image: url(../images/icons/menu.svg);
     margin-right: 88px;
 
-    &:hover {
-    background-image: url(../images/icons/menu-hover.svg);
-    }
+    @include hover(background-image, url(../images/icons/menu-hover.svg));
   }
 
   &--logo {
@@ -23,6 +21,7 @@
     background-image: url(../images/icons/close.svg);
     width: 13px;
     height: 13px;
+    @include hover(background-image, url(../images/icons/close-hover.svg));
   }
 
   &__footer--logo {
