--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -1,3 +1,9 @@
+@mixin forTablet () {
+  @media (min-width: 690px) {
+    @content;
+  }
+}
+
 .button {
   width: 280px;
   height: 50px;
@@ -5,6 +11,13 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+
+  @include forTablet() {
+    grid-column: 1 / 4;
+    grid-row: 3 / 4;
+    width: 270px;
+    height: 70px;
+  }
 
   &--green {
     border: 1px solid #1a5a1a4c;
@@ -30,6 +43,11 @@
     text-align: center;
     background-repeat: no-repeat;
     background-position: center;
+
+    @include forTablet () {
+      width: 70px;
+      height: 70px;
+    }
 
     &--green {
       background-color: #1a5a4c;
