--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,4 +1,5 @@
-@import "../styles/utils/reset";
+@import "./utils/reset";
+@import "./utils/mixins";
 
 @import "./blocks/title.scss";
 @import "./blocks/header.scss";
