add task solution

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -19,7 +19,7 @@
     transform: translateX(0);
     pointer-events: all;
     z-index: 2;
-    overflow: hidden;
+    overflow-x: hidden;
   }
 
   &__top {
