--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -20,3 +20,11 @@
     margin-right: 102px;
   }
 }
+
+.icon--facebook {
+  background-image: url(../images/icons/facebook-letter-logo.png);
+}
+
+.icon--instagram {
+  background-image: url(../images/icons/instagram-letter-logo.png);
+}
