--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,6 +7,8 @@
 @import "icon";
 @import "top-bar";
 @import "current__events";
+@import "contacts";
+@import "events";
 
 html {
   scroll-behavior: smooth;
