--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -47,7 +47,7 @@
     margin-bottom: 20px;
 
     @include forTablet() {
-      width: 374px;
+      width: 100%;
       height: 384px;
       grid-column: 4 / -1;
       grid-row: 1 / -1;
