updait tablet version

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -1,31 +1,30 @@
 .events {
   padding-top: 70px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  box-sizing: border-box;
-  padding: 0 20px;
+  padding-inline: 16px;
 
   @include onTablet {
-    padding: 0 34px;
+    padding-inline: 34px;
     justify-content: left;
+  }
+
+  @include onDesctop {
+    padding-inline: 55px;
   }
 
   &__catalog {
     display: flex;
     flex-direction: column;
-    // gap: 60px;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
     margin: 70px 0 60px;
+    gap: 60px;
 
-    @include onTablet {
-      justify-content: start;
-      align-items: start;
-      text-align: left;
-    }
+  @include onTablet {
+    gap: 64px;
   }
+
+  @include onDesctop {
+    gap: 104px;
+  }
+}
 
   &__title {
     font-family: 'Montserrat', sans-serif;
@@ -38,6 +37,11 @@
     @include onTablet {
       text-align: left;
       width: 460px;
+    }
+
+    @include onDesctop {
+      font-size: 48px;
+      line-height: 48px;
     }
   }
 }
