--- a/src/styles/footer.scss
+++ b/src/styles/footer.scss
@@ -1,33 +1,41 @@
 .footer {
-  padding: 0 20px;
+  padding-inline: 20px;
 
   @include onTablet {
-    display: flex;
-    flex-wrap: wrap;
+    padding-inline: 34px;
 
     &__schedule,
     &__contacts {
       width: 220px;
-      padding-left: 55px;
+      // margin-left: 40px;
     }
 
     &__navigation {
       width: 440px;
       justify-content: center;
       align-items: center;
-      padding-left: 125px;
+      padding: 65px 0 120px 123px;
     }
+  }
+
+  &__wrapper {
+    display: flex;
+  }
+
+  &__navigation__list {
+    list-style: none;
   }
 
   &__icons {
     margin-top: 50px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
 
     @include onTablet {
       flex-direction: column;
       justify-content: start;
+      align-items: flex-start;
+      margin-right: 40px;
     }
   }
 
@@ -42,14 +50,19 @@
 
     @include onTablet {
       margin-top: 62px;
+
+      & :not(:last-child) {
+        margin-right: 32px;
+      }
     }
   }
 
   &__conteiner {
-    padding: 40px 0 70px;
+    padding: 50px 0 64px;
     display: flex;
     gap: 20px;
     border-bottom: 1px solid $background-c-green;
+    width: fit-content;
 
     @include onTablet {
       gap: 0;
@@ -86,6 +99,13 @@
     line-height: 21px;
   }
 
+  &__bootom {
+    @include onTablet {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+
   &__rights {
     text-align: center;
     align-items: center;
@@ -93,14 +113,7 @@
     font-weight: 300;
     font-size: 13px;
     line-height: 16px;
-
-    &:first-of-type {
-      padding-bottom: 10px;
-    }
-
-    &:last-of-type {
-      margin-bottom: 50px;
-    }
+    padding-bottom: 36px;
   }
 }
 
