--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -27,7 +27,7 @@
   &__slider {
     display: flex;
     gap: 16px;
-    overflow: hidden;
+    overflow-x: hidden;
 
     @include onTablet {
       gap: 20px;
