--- a/src/styles/icons.scss
+++ b/src/styles/icons.scss
@@ -1,13 +1,14 @@
 .icon {
+  display: block;
   height: 24px;
   width: 24px;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: contain;
 
   &--menu {
     background-image: url(../images/icons/menu.svg);
     margin-right: 88px;
-
     @include hover(background-image, url(../images/icons/menu-hover.svg));
   }
 
@@ -17,15 +18,31 @@
     height: 61px;
   }
 
+  // &--arrow {
+  //   // height: 50px;
+  //   // width: 50px;
+  //   // background-image: url(../images/icons/arrow-white.svg);
+  //   // background-color: $background-c-green;
+  // }
+
   &--close {
     background-image: url(../images/icons/close.svg);
-    width: 13px;
-    height: 13px;
     @include hover(background-image, url(../images/icons/close-hover.svg));
   }
 
   &__footer--logo {
     width: 63px;
     height: 72px;
+    background-image: url(../images/logo-NA-MU.svg);
+  }
+
+  &--facebook {
+    background-image: url(../images/socials/facebook.svg);
+    @include hover(background-image, url(../images/socials/facebook-hover.svg));
+  }
+
+  &--instagram {
+    background-image: url(../images/socials/instagram.svg);
+    @include hover(background-image, url(../images/socials/instagram-hover.svg));
   }
 }
