--- a/src/styles/lections.scss
+++ b/src/styles/lections.scss
@@ -1,28 +1,19 @@
 .lections {
-  // background-image: url(..//images/mobile-muzej-2.png);
-  // background-repeat: no-repeat;
-  // background-size: contain;
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
-  position: relative;
+  background-image: url(..//images/mobile-muzej-2.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  width: auto;
+  height: 210px;
+  padding-inline: 20px;
 
-  &__image {
-    width: 320px;
-    height: 210px;
-    position: absolute;
-    z-index: -1;
-
-    @include onTablet {
-      top: 0;
-      left: 34px;
-      width: 700px;
-      height: 390px;
-    }
+  @include onTablet {
+    height: 390px;
+    padding-inline: 34px;
   }
 
   &__container {
-    transform: translateY(65%);
+    transform: translateY(109%);
     background-color: $background-c-white;
     text-align: center;
     width: 280px;
@@ -34,6 +25,7 @@
       transform: translateY(160%);
       width: 570px;
       margin-bottom: 150px;
+      margin: 0 auto;
     }
   }
 
