--- a/src/styles/event.scss
+++ b/src/styles/event.scss
@@ -1,19 +1,24 @@
 .event {
-  display: flex;
-  flex-direction: column;
-  text-align: left;
-  box-sizing: border-box;
-  max-width: 280px;
-  height: auto;
+
+  &__image__container {
+    max-width: 280px;
+
+    @include onTablet {
+        max-width: 700px;
+    }
+
+    @include onDesctop {
+      width: 670px;
+    }
+  }
 
   &__image {
-    width: 280px;
-    height: 210px;
+    width: 100%;
+    height: auto;
     margin-bottom: 16px;
 
     @include onTablet {
-      width: 699px;
-      height: 520px;
+      margin-bottom: 40px;
     }
   }
 
@@ -22,6 +27,10 @@
 
     @include onTablet {
       width: 460px;
+    }
+
+    @include onDesctop {
+      width: 370px;
     }
   }
 
@@ -33,6 +42,11 @@
     line-height: 16px;
     color: $c-grey;
     margin-bottom: 10px;
+
+    @include onDesctop {
+      font-size: 14px;
+      line-height: 14px;
+    }
   }
 
   &__date {
@@ -40,6 +54,11 @@
     line-height: 24px;
     color: $background-c-green;
     margin-left: 55px;
+
+    @include onDesctop {
+      font-size: 14px;
+      line-height: 21px;
+    }
   }
 
   &__title {
@@ -49,6 +68,11 @@
     line-height: 28px;
     color: $c-for-text;
     margin-bottom: 10px;
+
+    @include onDesctop {
+      font-size: 36px;
+      line-height: 36px;
+    }
 
     // &::after {
     //   content: "";
@@ -67,5 +91,9 @@
     line-height: 24px;
     color: #4e4e4e;
     margin-bottom: 60px;
+
+    @include onTablet {
+      margin: 0;
+    }
   }
 }
