--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -1,31 +1,25 @@
 .header {
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    text-align: center;
-
-    box-sizing: border-box;
-    position: relative;
-
-    height: 100vh;
     justify-content: space-between;
+    text-align: center;
+    box-sizing: border-box;
+    height: 100vh;
+
+    background-image: url(..//images/mobile-muzej.png);
+    background-repeat: no-repeat;
+    background-size: contain;
 
     @include onTablet {
+      width: 100%;
       height: 384px;
+      background-position: right;
     }
 
-  &__image {
-    position: absolute;
-    width: 100%;
-    height: auto;
-    z-index: -1;
-
-    @include onTablet {
-      max-width: 374px;
-      top: 0;
-      right: 0;
+    @include onDesctop {
+      height: 655px;
+      display: block;
     }
-  }
 
   &__nav {
     display: flex;
@@ -51,6 +45,12 @@
       align-items: start;
       padding-left: 34px;
     }
+
+    @include onDesctop {
+      padding-top: 143px;
+      align-items: flex-end;
+      width: 470px;
+    }
   }
 
   &__title {
@@ -64,16 +64,23 @@
     @include onTablet {
       font-size: 54px;
       line-height: 64px;
-      max-width: 340px;
+      // max-width: 340px;
       text-align: left;
+    }
+
+    @include onDesctop {
+      font-size: 72px;
+      line-height: 86px;
     }
   }
 
   &__bottom__container {
     display: flex;
     justify-content: center;
-    // align-items: center;
-    // text-align: center;
+
+    @include onDesctop {
+      margin-top: 69px;
+    }
   }
 
   &__bottom__link {
@@ -95,14 +102,12 @@
     }
   }
 
-  &__bottom__image {
+  &__bottom__button {
     background-color: $background-c-green;
-    // margin-left: 80px;
-    padding: 19px 20px;
-    // transform: translateY(37%);
+    padding: 16px 21px;
 
     @include onTablet {
-      padding: 21px;
+      padding: 24px 31px;
     }
   }
 }
