--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,5 +35,6 @@ html {
 body {
   background: $background-c-white;
   font-family: 'IBM Ple x Sans', sans-serif;
+  color: $c-for-text;
   margin: 0;
 }
