--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,29 @@
 @import "utils";
 @import "fonts";
 @import "typography";
+@import "blocks/icon.scss";
+@import "blocks/container.scss";
+@import "blocks/logo.scss";
+@import "blocks/header.scss";
+@import "blocks/actual.scss";
+@import "blocks/lection.scss";
+@import "blocks/gallery.scss";
+@import "blocks/slider.scss";
+@import "blocks/buttons.scss";
+@import "blocks/suscribe.scss";
+@import "blocks/nav.scss";
+@import "blocks/footer.scss";
+@import "blocks/menu.scss";
 
-body {
-  background: $c-gray;
+* {
+  margin: 0;
+  box-sizing: border-box;
+  font-family: "IBM Plex Sans", sans-serif;
+  font-style: normal;
+  scroll-behavior: smooth;
+  transition: all 0.5s;
+}
+
+.page:has(.menu:target) {
+  overflow: hidden;
 }
