--- a/src/styles/utils/_extends.scss
+++ b/src/styles/utils/_extends.scss
@@ -1,4 +1,60 @@
 %h1 {
-  font-family: "Roboto", sans-serif;
+  color: $mainBlack;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 45px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 54px;
+    line-height: 120%;
+  }
+
+  @include onDesktop {
+    font-size: 72px;
+  }
+
+  &:hover {
+    color: $mainGreen;
+    transform: scale(1.1);
+  }
+}
+
+%h2 {
+  color: $mainBlack;
+  text-align: center;
+  font-family: "Montserrat", sans-serif;
+  font-size: 36px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 48px;
+  }
+
+  &:hover {
+    color: $mainGreen;
+    transform: scale(1.1);
+  }
+}
+
+%h3 {
+  color: $mainBlack;
+  font-family: "Montserrat", sans-serif;
+  font-size: 28px;
+  font-style: normal;
   font-weight: 400;
+  line-height: 100%;
+
+  @include onTablet {
+    font-size: 36px;
+  }
+
+  &:hover {
+    color: $mainGreen;
+    transform: scale(1.1);
+  }
 }
