add task solution

--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -98,7 +98,9 @@
       background-repeat: no-repeat;
       background-position: 50%;
 
-      @include TextHover;
+      &:hover {
+        background-color: #bc2b0f;
+      }
 
       @include onTablet {
         width: 70px;
