--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,7 +1,30 @@
-@import "utils";
-@import "fonts";
-@import "typography";
+@import "utils/utils";
+@import "utils/fonts";
+@import "utils/typography";
+
+@import "utils/mixins";
+@import "utils/vars";
+
+@import "blocks/actions.scss";
+@import "blocks/btn.scss";
+@import "blocks/container.scss";
+@import "blocks/footer.scss";
+@import "blocks/form.scss";
+@import "blocks/gallery.scss";
+@import "blocks/header.scss";
+@import "blocks/logo.scss";
+@import "blocks/main.scss";
+@import "blocks/menu-header.scss";
+@import "blocks/menu.scss";
+@import "blocks/page.scss";
+@import "blocks/schedule.scss";
+@import "blocks/section-title.scss";
+@import "blocks/slider.scss";
+@import "blocks/social-icons.scss";
+@import "blocks/subscribe.scss";
+@import "blocks/tickets.scss";
+@import "blocks/top-bar.scss";
 
 body {
-  background: $c-gray;
+  background: $c-main;
 }
