--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -1,1 +1,6 @@
-$c-gray: #eee;
+$c-main: #fff;
+$transition-duration: 0.5s;
+
+$color-title: #0f0e08;
+$color-secondary : #1a5a4c;
+$color-hover: #f14a27;
