--- a/src/styles/blocks/header.scss
+++ b/src/styles/blocks/header.scss
@@ -35,6 +35,12 @@
     }
   }
 
+  &__button {
+    @include forTablet () {
+      margin-left: 34px;
+    }
+  }
+
   &__background {
     background-image: url(../images/header_image.jpg);
     background-position: center;
@@ -62,13 +68,14 @@
       grid-column: 1 / 4;
       grid-row: 2 / 3;
       text-align: left;
+      margin-left: 34px;
     }
   }
 
   @include forTablet() {
     display: grid;
     justify-content: space-evenly;
-    grid-template-columns: repeat(6, 90px);
+    grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(3, 130px);
     height: 384px;
     margin-bottom: 88px;
