--- a/src/styles/blocks/links.scss
+++ b/src/styles/blocks/links.scss
@@ -1,9 +1,15 @@
+@use './utils/_mixins.scss' as *;
+
 .links {
 
-  &__list{
+  &__list {
     display: grid;
     grid-template-columns: 130px 130px;
     gap: 20px;
+
+    @include forTablet {
+      grid-template-columns: repeat(2, 220px);
+    }
   }
 
   &__item {
