Museum final commit

--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -9,7 +9,7 @@
   &__top {
     display: flex;
     flex-direction: column;
-    padding: 28px 0 0;
+    padding: 31px 0;
 
     @include OnDesctopAndLaptop {
       flex-direction: row;
