layout for tablet ready

--- a/src/styles/blocks/footer.scss
+++ b/src/styles/blocks/footer.scss
@@ -12,4 +12,12 @@
   &__text {
     margin-top: 10px;
   }
+
+  @include forTablet {
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    margin: 0px 36px 34px;
+    justify-content: space-between;
+  }
 }
