--- a/src/styles/blocks/title.scss
+++ b/src/styles/blocks/title.scss
@@ -1,3 +1,5 @@
+@use './utils/_mixins.scss' as *;
+
 .title {
   font-family: Montserrat, sans-serif;
   font-size: 45px;
@@ -13,7 +15,7 @@
     margin-bottom: 40px;
 
     &--subscribe {
-      color: #FFF;
+      color: #fff;
       margin: 88px 0 20px;
       position: absolute;
       z-index: 1;
@@ -34,6 +36,11 @@
     font-style: normal;
     font-weight: 400;
     text-align: left;
+
+    @include forTablet {
+      line-height: 20px;
+      margin-bottom: 20px;
+    }
 
     &--white {
       color: #fff;
