--- a/src/styles/blocks/contact-us.scss
+++ b/src/styles/blocks/contact-us.scss
@@ -3,7 +3,7 @@
 .contact-us {
   display: grid;
   grid-template-columns: 130px 128px;
-  gap: 40px 20px;
+  gap: 0px 20px;
 
   &__links {
     margin-bottom: 80px;
@@ -17,6 +17,8 @@
     @include forTablet () {
       grid-column-start: 1;
       grid-row-start: 1;
+      height: 72px;
+      margin-bottom: 64px;
     }
   }
 
