--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -18,7 +18,7 @@
   }
 
   &__text {
-    color: #FFF;
+    color: #fff;
     text-align: center;
     font-family: IBM Plex Sans, sans-serif;
     font-size: 18px;
