--- a/src/styles/blocks/buttons.scss
+++ b/src/styles/blocks/buttons.scss
@@ -40,14 +40,16 @@
     text-transform: uppercase;
     font-weight: $middle-font;
     color: $color-black;
-    
-    @include hover(transform, scale(1.2));
+
+    &:hover {
+      color: $color-grey;
+    }
   }
 
   &__button::after {
     @include underlineLinks;
-    background-color: $color-black;
-    opacity: 80%;
+    background-color: $color-grey;
+    opacity: 50%;
   }
 
   &__button:hover::after {
