--- a/src/styles/blocks/current-events.scss
+++ b/src/styles/blocks/current-events.scss
@@ -144,11 +144,13 @@
   text-decoration: none;
   color: $color-black;
 
-  @include hover(transform, scale(1.05));
+  &:hover {
+    color: $color-grey;
+  }
 
   &::after {
     @include underlineLinks;
-    background-color: $color-black;
+    background-color: $color-grey;
     opacity: 50%;
   }
 
