--- a/src/styles/blocks/section-title.scss
+++ b/src/styles/blocks/section-title.scss
@@ -130,6 +130,29 @@
     }
   }
 
+  &__titles-square {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+
+    @include onDesktop {
+      width: 370px;
+    }
+  }
+
+  &__square {
+    display: block;
+    width: 10px;
+    height: 10px;
+    margin: 12px 12px 15px;
+    background-color: $color-orange;
+
+    @include onTablet {
+      width: 15px;
+      height: 15px;
+    }
+  }
+
   &__title-third {
     text-align: center;
     
@@ -178,10 +201,10 @@
   color: $color-black;
 
   @include onTablet {
-    margin-block: 51px 20px;
+    scroll-margin-bottom: 20px;
   }
 
   @include onDesktop {
-    margin-block: 47px  20px;
+    margin-bottom: 20px;
   }
 }
