--- a/src/styles/utils/_vars.scss
+++ b/src/styles/utils/_vars.scss
@@ -12,6 +12,7 @@ $color-green: #1a5a4c;
 $color-grey: #687480;
 $color-white: #fff;
 $color-dark-grey: #4e4e4e;
+$color-orange: #f14a27;
 $small-font-size: 14px;
 $line-height-list-day: 21px;
 $effectDuration: 0.5s;
