--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,73 +1,45 @@
-.gallery {
-  box-sizing: border-box;
-  
-  @include contentPaddingInline;
+.gallery-indent {
+  @include  contentPaddingInline;
 
-  &-indent {
-    margin-block: 100px 100px;
+  margin-block: 100px 109px;
 
-    @include onTablet {
-      margin-block: 88px 133px;
-    }
-
-    @include onDesktop {
-      margin-block: 200px;
-    }
+  @include onTablet {
+    margin-block: 88px 92px;
   }
   
-  &__wrapper {
-    position: relative;
-    margin: 0 auto;
+  @include onDesktop {
+    margin-block: 200px;
+  }
+}
+
+.gallery {
+  &__container {
+    margin: 0;
     margin-top: 40px;
-    width: 100%;
-    height: 100vh;
- 
+
     @include onTablet {
-      min-width: 690px;
       margin-top: 48px;
     }
 
     @include onDesktop {
+      margin-top: 56px;
       display: none;
     }
   }
 
-  &__slider {
-    height: inherit;
-    overflow: hidden;
-    position: relative;
-    width: inherit;
-  }
-
-  &__wrapper > input {
-    display: none;
-  }
-
-  &__controls {
-    margin-top: 20px;
-    height: 9px;
-    left: 58%;
-    margin-left: -98px;
-    position: absolute;
-
-    @include onTablet {
-      margin-top: 32px;
-    }
+  &__indent {
+    margin: 0 auto;
   }
 
   &__wrapper-desktop {
     display: none;
-
+  
     @include onDesktop {
+    
       @include pageGrid;
       row-gap: 30px;
       margin-top: 56px;
     }
-  }
-
-  &__pictures {
-    width: 100%;
-    height: 100%;
   }
 
   &__picture {
@@ -77,128 +49,164 @@
   }
 }
 
-.slides {
-  height: inherit;
-  opacity: 0;
-  position: absolute;
-  width: inherit;
-  object-fit: cover;
-  z-index: 0;
-  transition: transform ease-in-out 0.5s, opacity ease-in-out 0.5s;
-}
-
-.slide-first {
-  background-image: url(../images/gallery/first-img-gall.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-
-  @include onTablet {
-    grid-column: 1/-1;
-    background-image: url(../images/gallery/first-img-gall.png), url(../images/gallery/second-img-gall.png);
-    background-size: 335px 100%, 335px 100%;
-    background-repeat: no-repeat;
-    background-position: left bottom, right bottom;
-  }
-}
-
-.slide-second {
-  background-image: url(../images/gallery/second-img-gall.png);
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-
-  @include onTablet {
-    background-image: url(../images/gallery/fourth-img-gall.png);
-    background-size: 100% 100%;
-  }
-}
-
-.slide-third {
-  background-image: url(../images/gallery/five-img-gall.png);
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-
-  @include onTablet {
-    background-size: 100% 100%;
-  }
-}
-
-.slide-fourth {
-  background-image: url(../images/gallery/third-img-gall.png);
-  background-size: 100% auto;
-  background-repeat: no-repeat;
-}
-
-#slide-first:checked ~ .gallery__slider > .slide-first,
-#slide-second:checked ~ .gallery__slider > .slide-second,
-#slide-third:checked ~ .gallery__slider > .slide-third,
-#slide-fourth:checked ~ .gallery__slider > .slide-fourth {
-  opacity: 1;
-  z-index: 1;
-  transform: scale(1);
-}
-
-.control {
-  box-sizing: border-box;
-  cursor: pointer;
-  display: inline-block;
-  align-items: center;
-  width: 9px;
-  height: 9px;
-  top: -33px;
-  left: 8px;
-  background-color: #e0e0e0;
-  margin: 20px 22px 0 0;
-  padding: 2px;
+.slider {
   position: relative;
-  border-radius: 50%;
-  transition: ease-in-out 0.5s;
 
-  @include onTablet {
-    margin: 32px 22px 0 0;
+  &__block {
+    max-width: 100vw;
+    height: 100%;
+    overflow: hidden;
+  }
+
+  &__box {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    height: inherit;
+    width: inherit;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    column-gap: 16px;
+    transition: left $effectDuration linear;
+
+    list-style: none;
+
+    @include onTablet {
+      column-gap: 20px;
+    }
+  }
+
+  @include onDesktop {
+    @include pageGrid;
+  }
+
+  &__img {
+    height: 100%;
+
+    @include onTablet {
+      width: 335px;
+      object-fit: cover;
+    }
+  }
+
+  &__control {
+    position: absolute;
+    left: 50%;
+    bottom: -20px;
+    width: 9px;
+    height: 9px;
+    border-radius: 50%;
+    background-color: #e0e0e0;
+    cursor: pointer;
+    
+    @include onTablet {
+      bottom: -32px;
+    }
+
+    @include onDesktop {
+      display: none;
+    }
+
+    &--1 {
+      margin-left: -44px;
+    }
+
+    &--2 {
+      margin-left: -22px;
+    }
+
+    &--4 {
+      margin-left: 22px;
+    }
+  }
+
+  &__input {
+    position: absolute;
+    left: 50%;
+    bottom: 15px;
+    z-index: 6;
+    visibility: hidden;
+
+    @include onDesktop {
+      display: none;
+    }
+
+    &:checked + .slider__control {
+      background-color: $color-green;
+    }
+
+    &--1:checked ~ .slider__block > .slider__box {
+      left: 0;
+    }
+
+    &--2:checked ~ .slider__block > .slider__box {
+      left: -100%;
+    }
+
+    &--3:checked ~ .slider__block > .slider__box {
+      left: -200%;
+    }
+
+    &--5:checked ~ .slider__block > .slider__box {
+      left: -400% ;
+    }
+
+    @include onTablet {
+      &--1:checked ~ .slider__block > .slider__box {
+        left: 0;
+      }
+
+      &--2:checked ~ .slider__block > .slider__box {
+        left: -30%;
+      }
+
+      &--3:checked ~ .slider__block > .slider__box {
+        left: -60%;
+      }
+
+      &--5:checked ~ .slider__block > .slider__box {
+        left: -70%;
+      }
+    }
   }
 }
 
-.control:hover,
-#slide-first:checked ~ .gallery__controls label:nth-of-type(1),
-#slide-second:checked ~ .gallery__controls label:nth-of-type(2),
-#slide-third:checked ~ .gallery__controls label:nth-of-type(3),
-#slide-fourth:checked ~ .gallery__controls label:nth-of-type(4) {
-  background-color: $color-green;
+.item {
+  height: 410px;
+
+  @include onTablet {
+    height: 543px;
+  }
+
+  @include hover (transform, scale(1.05)); 
+
+  
+  &--4 {
+    display: none;
+  }
 }
 
-.gallery__wrapper label:after {
-  content: " ";
-  display: block;
-  width: 9px;
-  height: 9px;
-  position: absolute;
-  border-radius: 50%;
+.gallery__pictures {
+  width: 100%;
+  height: 100%;
+
+  @include hover(transform, scale(1.05));
 }
 
 .pictures {
   &-first {
     grid-column: span 4;
-
-    @include hover(transform, scale(1.05));
   }
 
   &-second {
     grid-column: span 8;
-
-    @include hover(transform, scale(1.05));
   }
 
   &-third {
     grid-column: span 8;
-
-    @include hover(transform, scale(1.05));
   }
 
   &-fourth {
     grid-column: span 4;
-  
-    @include hover(transform, scale(1.05));
   }
 }
