--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,20 +11,21 @@
 @import "blocks/subscribe";
 @import "blocks/nav";
 
-body {
-  background-color: $color-white;
-  font-family: "IBM Plex Sans", sans-serif;
-}
-
 .page {
   position: relative;
+  scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
   
   &__body {
     position: relative;
     margin: 0;
     min-width: 320px;
-    max-width: 100%;
+    height: 100%;
     overflow-x: hidden;
+
+    background-color: $color-white;
+    font-family: "IBM Plex Sans", sans-serif;
   }
 
   &:has(.page__menu:target) {
