add task solution

--- a/src/styles/blocks/btn.scss
+++ b/src/styles/blocks/btn.scss
@@ -1,9 +1,7 @@
 .btn {
   border: none;
   cursor: pointer;
-  align-self: center;
-  width: 70px;
-  height: 70px;
+  width: 100%;
 
   &__tickets {
     background-color: $color-secondary;
@@ -14,12 +12,19 @@
   }
 
   &__form {
-    margin-left: 30px;
     background-color: #f14a27;
     width: 50px;
+    height: 50px;
 
     @include onTablet {
       width: 70px;
+      height: 70px;
+
+      margin-left: 15px;
+    }
+
+    @include onDesktop {
+      margin-left: 30px;
     }
   }
 }
