--- a/src/styles/blocks/gallery.scss
+++ b/src/styles/blocks/gallery.scss
@@ -1,9 +1,11 @@
 .gallery {
   &__title {
+    margin-top: 150px;
     margin-bottom: 40px;
 
     @include onTablet {
       margin-bottom: 48px;
+      margin-top: 220px;
       text-align: left;
     }
 
@@ -20,8 +22,6 @@
     display: none;
 
     @include onDesktop {
-      // display: none;
-
       @include grid;
       row-gap: 30px;
       margin-bottom: 200px;
@@ -32,18 +32,18 @@
     overflow: hidden;
 
     &--1 {
-      grid-column: 1/5;
+      grid-column: 1 / 5;
     }
 
     &--2 {
-      grid-column: -1/-9;
+      grid-column: -1 / -9;
     }
     &--3 {
-      grid-column: 1/9;
+      grid-column: 1 / 9;
       grid-row: 2;
     }
     &--4 {
-      grid-column: -1/-5;
+      grid-column: -1 / -5;
       grid-row: 2;
     }
   }
