--- a/src/styles/blocks/main.scss
+++ b/src/styles/blocks/main.scss
@@ -1,5 +1,6 @@
 .main {
   &__schedule {
+    font-family: "IBM Plex Sans", sans-serif;
     margin-bottom: 80px;
 
     @include onDesktop {
@@ -14,8 +15,4 @@
       margin-bottom: 48px;
     }
   }
-}
-
-* {
-  scroll-behavior: smooth;
 }
