--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -46,17 +46,25 @@
   }
 
   &__item {
-    color: $color-title;
+    color: $color-secondary;
     display: block;
     text-decoration: none;
 
     @include hover (color, $color-hover);
 
     &--header {
+      margin: 0;
       color: #fff;
       font-size: 16px;
       font-weight: 500;
       line-height: 100%;
+      font-family: "IBM Plex Sans", sans-serif;
+
+      @include onTablet {
+        font-size: 22px;
+        line-height: 22px;
+        font-weight: 550;
+      }
     }
   }
 }
