--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,6 +1,6 @@
 .subscribe {
   padding: 88px 0;
-  background-size: cover;
+  background-position: center;
   background-image: url(../images/footer-photo/1.png);
 
   @include onTablet {
