--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -24,7 +24,25 @@
 @import "blocks/subscribe.scss";
 @import "blocks/tickets.scss";
 @import "blocks/top-bar.scss";
+@import "blocks/visually-hidden.scss";
 
 body {
   background: $c-main;
+
+  &:has(.menu-header:target) {
+    overflow: hidden;
+  }
+}
+
+* {
+  background-size: cover;
+  box-sizing: border-box;
+  scroll-behavior: smooth;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
 }
