--- a/src/styles/blocks/actions.scss
+++ b/src/styles/blocks/actions.scss
@@ -30,7 +30,6 @@
   }
 
   &__img-wr {
-    background-size: cover;
     height: fit-content;
     overflow: hidden;
     margin-bottom: 20px;
@@ -70,7 +69,7 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
-      grid-column: -1 / -5;
+      grid-column: -1/-5;
     }
   }
 
@@ -97,13 +96,11 @@
   }
 
   &__name {
-    text-transform: uppercase;
     font-family: "IBM Plex Sans", sans-serif;
     color: #687480;
     font-size: 16px;
     font-weight: 500;
     line-height: 100%;
-    margin-bottom: 0;
 
     @include onTablet {
       font-size: 14px;
@@ -111,7 +108,6 @@
   }
 
   &__date {
-    margin-bottom: 0;
     font-family: "IBM Plex Sans", sans-serif;
     justify-self: end;
     color: $color-secondary;
@@ -126,7 +122,8 @@
   }
 
   &__title {
-    margin-top: 0;
+    margin-bottom: 10px;
+
     color: $color-title;
     font-family: "Montserrat", sans-serif;
     font-size: 28px;
@@ -137,7 +134,7 @@
 
     @include onTablet {
       font-size: 36px;
-      margin-bottom: 10px;
+      margin-bottom: 15px;
     }
 
     &::after {
@@ -145,14 +142,14 @@
       content: "";
       width: 10px;
       height: 10px;
-      background-color: #f14a27;
+      background-color: red;
       display: block;
       position: absolute;
       top: 11px;
       right: -20px;
 
       @include onTablet {
-        top: 12px;
+        top: 14px;
         width: 15px;
         height: 15px;
         right: -30px;
@@ -160,13 +157,15 @@
     }
 
     &--3 {
-      font-family: "Montserrat", sans-serif;
       text-align: center;
       padding-bottom: 20px;
-      margin: 0 auto;
+      margin-bottom: 10px;
+      margin-top: -20px;
 
       @include onTablet {
         text-align: left;
+        margin-top: 20px;
+        margin-bottom: -20px;
       }
 
       &::after {
@@ -176,12 +175,11 @@
   }
 
   &__text {
-    margin-right: 30px;
+    font-family: "IBM Plex Sans", sans-serif;
     color: #4e4e4e;
     font-size: 16px;
     font-weight: 300;
     line-height: 150%;
-    font-family: "IBM Plex Sans", sans-serif;
 
     @include onTablet {
       width: 460px;
