--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -4,6 +4,26 @@
   max-width: 1280px;
   margin: 0 auto;
 
+  &__lection {
+    position: absolute;
+    margin-left: 20px;
+    margin-top: -120px;
+    width: 280px;
+    height: 140px;
+
+    @include onTablet {
+      position: absolute;
+      margin-top: -155px;
+      margin-left: 100px;
+    }
+
+    @include onDesktop {
+      position: absolute;
+      margin-top: -135px;
+      margin-left: 395px;
+    }
+  }
+
   @include onTablet {
     padding-inline: 35px;
   }
