--- a/src/styles/blocks/schedule.scss
+++ b/src/styles/blocks/schedule.scss
@@ -1,5 +1,6 @@
 .schedule {
   font-family: "IBM Plex Sans", sans-serif;
+
   &__header {
     grid-column: 1/-1;
     display: flex;
@@ -74,29 +75,23 @@
   }
 
   &__text {
-    margin: 0;
     color: $color-title;
     font-size: 14px;
     font-weight: 400;
     line-height: 24px;
+    margin-bottom: 2px;
     display: block;
     text-decoration: none;
 
     &--time {
-      margin: 0;
-      font-size: 14px;
       font-weight: 700;
     }
 
     &--title {
-      margin: 0;
-      font-weight: 400;
       margin-bottom: 20px;
     }
 
     &--link {
-      margin: 0;
-
       @include hover(color, $color-hover);
     }
   }
@@ -114,11 +109,6 @@
     @include onTablet {
       display: none;
     }
-  }
-
-  &__day {
-    font-family: "IBM Plex Sans", sans-serif;
-    margin: 0;
   }
 
   &__menu {
