--- a/src/styles/blocks/top-bar.scss
+++ b/src/styles/blocks/top-bar.scss
@@ -18,6 +18,7 @@
     transition: $transition-duration;
     position: absolute;
     left: 20px;
+    top: 20px;
 
     @include onTablet {
       top: 39px;
@@ -30,7 +31,7 @@
     }
 
     &:hover {
-      background-image: url(../images/icons/menu.svg);
+      @include hover(transform, scale(1.2));
     }
   }
 }
