add task solution

--- a/src/styles/blocks/menu-header.scss
+++ b/src/styles/blocks/menu-header.scss
@@ -32,8 +32,6 @@
     transition-delay: 0.5s;
     margin-bottom: 24px;
 
-    pointer-events: none;
-
     @include onTablet {
       grid-column: 1/4;
       padding: 0;
@@ -79,8 +77,8 @@
     height: 24px;
     background-image: url(../images/icons/close.svg);
     position: absolute;
-    top: 20px;
-
+    top: 27px;
+    left: 0;
     z-index: 1;
 
     @include hover(transform, rotate(30deg));
