--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -49,6 +49,7 @@
     color: $color-secondary;
     display: block;
     text-decoration: none;
+    transition: color 0.5s;
 
     @include hover (color, $color-hover);
 
