--- a/src/styles/blocks/container.scss
+++ b/src/styles/blocks/container.scss
@@ -8,6 +8,8 @@
     display: flex;
     height: 140px;
     margin-top: -90px;
+    margin-left: 20px;
+    margin-right: 20px;
     position: absolute;
 
     @media (min-width: 460px) {
@@ -21,7 +23,7 @@
     @include onTablet {
       height: 204px;
       margin-top: -135px;
-      padding-inline: 100px;
+      padding-inline: 85px;
     }
 
     @media (min-width: 777px) {
