--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -65,6 +65,9 @@
         font-size: 22px;
         line-height: 22px;
         font-weight: 550;
+
+        padding-inline-end: 20px;
+        margin-right: -65px;
       }
     }
   }
