add new  task solutions

--- a/src/styles/blocks/footers-style.scss
+++ b/src/styles/blocks/footers-style.scss
@@ -1,5 +1,7 @@
 .footer {
-  height: 100vh;
+  height: 100%;
+  box-sizing: border-box;
+
   @include contentPaddingInline;
 
   @include onDesktop {
@@ -180,11 +182,11 @@
 
 .design-copyrigth {
   margin: 0 auto;
-  margin-top: 80px;
+  margin-block: 80px 128px;
+
   display: flex;
   flex-direction: column;
   text-align: center;
-
   font-weight: 300;
   font-size: 12px;
   line-height: 16.88px;
