--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -22,6 +22,7 @@
     margin: 0;
     min-width: 320px;
     height: 100%;
+    box-sizing: border-box;
     overflow-x: hidden;
 
     background-color: $color-white;
