--- a/src/styles/blocks/subscribe.scss
+++ b/src/styles/blocks/subscribe.scss
@@ -1,14 +1,23 @@
 .subscribe {
   box-sizing: border-box;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   background-image: url(../images/bg-img-subscribe.png);
   background-repeat: no-repeat;
   background-size: cover;
   background-color: #000000bf;
-  
+  padding-bottom: 88px;
+
   @include contentPaddingInline;
 
+  @include onTablet {
+    padding-bottom: 82px;
+  }
+
+  @include onDesktop {
+    padding-bottom: 163px;
+  }
+  
   &__wrapper {
     @include pageGrid;
   }
@@ -91,8 +100,6 @@
   padding-left: 24px;
   font-family: $font-Motserrat;
   font-weight: $small-font;
-  font-size: 14px;
-  line-height: 14px;
   color: #687480;
 
   @include onDesktop {
