add task solution

--- a/src/styles/aside.scss
+++ b/src/styles/aside.scss
@@ -13,6 +13,7 @@
   transform: translateY(-100%);
   transition: all 0.3s;
   pointer-events: none;
+  overflow: hidden;
 
   &:target {
     opacity: 1;
