--- a/src/styles/events.scss
+++ b/src/styles/events.scss
@@ -99,7 +99,8 @@
       background-position: 50%;
 
       &:hover {
-        background-color: #bc2b0f;
+        transition: 0.3s;
+        border: 3px solid #fff;
       }
 
       @include onTablet {
