--- a/src/styles/icon.scss
+++ b/src/styles/icon.scss
@@ -28,3 +28,7 @@
 .icon--instagram {
   background-image: url(../images/icons/instagram-letter-logo.png);
 }
+
+.icon--arrow {
+  background-image: url(../images/icons/carbon_arrow-up.png);
+}
