--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -10,21 +10,4 @@
 @import "contacts";
 @import "events";
 @import "galery";
-
-html {
-  scroll-behavior: smooth;
-
-}
-
-body {
-  font-family: "IBM Plex Sans", sans-serif;
-  font-size: 14px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: 150%;
-  background: $c-gray;
-  color: #fff;
-
-  margin: 0 auto;
-  box-sizing: border-box;
-}
+@import "page";
