--- a/src/styles/contacts.scss
+++ b/src/styles/contacts.scss
@@ -1,4 +1,5 @@
 .contacts {
+  position: relative;
   @include content;
   padding-top: 50px;
   padding-bottom: 35px;
@@ -64,14 +65,44 @@
 
   &__link {
     text-decoration: none;
-    color: #0f0e08;
+    color: $museum-black;
+    transition: 0.3s;
+
+    &:hover {
+      color: #fff;
+      background-color: $museum-green;
+    }
+  }
+
+  &__arrow {
+    display: flex;
+    justify-content: end;
+    margin: 0;
+    margin-bottom: 20px;
+
+    grid-column: 1 / -1;
+
+    &--content {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 50px;
+      height: 50px;
+
+      border: 1px solid $museum-green;
+
+      border-radius: 50%;
+
+      @include onTablet {
+        display: none;
+      }
+    }
   }
 
   &__line {
     width: 100%;
     height: 1px;
-    background-color: #1a5a4c;
-    margin-top: 70px;
+    background-color: $museum-green;
     grid-column: 1 / -1;
 
     @include onTablet {
@@ -113,7 +144,7 @@
 
   &__menu__link {
     box-sizing: border-box;
-    color: #0f0e08;
+    color: $museum-black;
     line-height: 100%;
     text-decoration: none;
     width: fit-content;
@@ -130,7 +161,7 @@
       display: block;
       height: 1px;
       width: 100%;
-      background-color: #0f0e08;
+      background-color: $museum-black;
 
       transition: transform 0.3s;
       transform: scale(0);
@@ -168,7 +199,7 @@
 
     &--link {
       text-decoration: none;
-      color: #0f0e08;
+      color: $museum-black;
       text-align: center;
       font-size: 12px;
       font-weight: 300;
@@ -177,7 +208,7 @@
   }
 
   &__work--day {
-    color: #0f0e08;
+    color: $museum-black;
     font-weight: 400;
     margin: 0;
 
