--- a/src/styles/galery.scss
+++ b/src/styles/galery.scss
@@ -2,21 +2,21 @@
   @include content;
   grid-row-gap: 30px;
 
-  padding-top: 100px;
+  padding-top: 183px;
   padding-bottom: 100px;
 
   @include onTablet {
-    padding-top: 88px;
+    padding-top: 208px;
     padding-bottom: 92px;
   }
 
   @include onDesktop {
-    padding-top: 200px;
+    padding-top: 302px;
     padding-bottom: 200px;
   }
 
   &__title {
-    color: #0f0e08;
+    color: $museum-black;
     font-family: "Montserrat", sans-serif;
     font-size: 36px;
     font-style: normal;
@@ -133,5 +133,5 @@
 }
 
 .active {
-  background-color: #1a5a4c;
+  background-color: $museum-green;
 }
