--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -65,14 +65,7 @@
   &__button {
     position: relative;
     display: flex;
-    justify-content: center;
     align-items: center;
-    text-decoration: none;
-
-    color: #0f0e08;
-    font-size: 16px;
-    font-weight: 500;
-    line-height: 100%;
 
     margin: 0;
     height: 50px;
@@ -102,9 +95,17 @@
     @include onDesktop {
       grid-column: 3 / 6;
     }
-    &::after {
-      content: " ";
-      position: absolute;
+
+    &--link {
+      text-decoration: none;
+      color: $museum-black;
+      font-weight: 500;
+      line-height: 100%;
+      margin: 0 auto;
+    }
+
+    &--arie {
+      position: relative;
       right: 0;
       background-image: url(../images/icons/baseline-keyboard_arrow_right-24px.png);
       width: 50px;
@@ -157,7 +158,7 @@
   }
 
   &__item {
-    color: #0f0e08;
+    color: $museum-black;
     text-align: center;
     font-family: "Montserrat", sans-serif;
     font-size: 36px;
